# spam-detection

./: EDA & Preprocessing.ipynb  README.md  SpamDetection.ipynb  app.py  model.pkl  pyproject.toml  requirements.txt  spam_detection.pkl
.ipynb_checkpoints/: DashBoard-checkpoint.ipynb  EDA & Preprocessing-checkpoint.ipynb  SpamDetection-checkpoint.ipynb  app-checkpoint.py  pyproject-checkpoint.toml
models/: spam_detection.pkl
spam/: pnpm-lock.yaml
