[project]
name = "Email Spam Detection System"
version = "0.0.1"
description = "A system to detect all the spams and hams emails"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=4.0.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
]
